# Bird_Acoustics

./: Dockerfile  README.md  pyproject.toml
firmware/src/: model_data.h
models/: best_model.pth  classes.json  final_model.pth  history.json
models/exported/: bird_classes.h  bird_classifier_float32.tflite  bird_classifier_int8.tflite  model_data.h
models/exported_esp32/: bird_classifier_float32.tflite  bird_classifier_int8.tflite  model_data.h
models/exported_v3/: bird_classes.h  bird_classifier_float32.tflite  bird_classifier_int8.tflite  export_metadata.json  model_data.h
models/lottery_ticket/: lottery_ticket_results_79pct.json  winning_ticket_79pct.pth
models/v3/: best_model.pth  config.json  final_model.pth  history.json
models/v3_debug/: best_model.pth  config.json  final_model.pth  history.json
scripts/: augment_audio.py  create_manifest.py  dataset.py  dataset_v2.py  download_bg.py  download_xenocanto.py  export_tflite.py  export_tflite_sum.py  export_v2.py  lottery_ticket_pruning.py  model.py  preprocess_audio.py  test_setup.py  train.py  train_v3.py  verify_data_leakage.py  verify_environment.py  verify_int8_fix.py  verify_winning_ticket.py  visualize_spectrograms.py
