[project]
name = "bird-detection"
version = "0.1.0"
description = "California bird acoustic detection system using TinyML on ESP32-S3"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "arcTan"}
]
keywords = ["tinyml", "bird-detection", "esp32", "edge-ai", "audio-classification"]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pydub>=0.25.0",
    "audiomentations>=0.33.0",
    "xenopy>=0.0.4",
]

[project.optional-dependencies]
export = [
    "onnx>=1.14.0",
    "onnx-tf>=1.10.0",
    "tensorflow>=2.13.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/arcTanMyAngle/bird-detection"
Repository = "https://github.com/arcTanMyAngle/bird-detection"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# PyTorch CPU-only configuration (per official uv docs)
# https://docs.astral.sh/uv/guides/integration/pytorch/
# ============================================================

[tool.uv]
package = false

# Define the PyTorch CPU index with explicit = true
# This ensures ONLY torch/torchaudio use this index
# All other packages (audiomentations, librosa, etc.) come from PyPI
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Pin PyTorch packages to the CPU index
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]
torchaudio = [
    { index = "pytorch-cpu" }
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
