[project]
name = "bird-detection-v3"
version = "3.0.0"
description = "California bird acoustic detection - Edge AI deployment"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [{name = "arcT"}]

dependencies = [
    # Core ML - pinned for ai-edge-torch compatibility
    "torch==2.5.1",
    "torchaudio==2.5.1",
    # The new export stack (NO onnx-tf!)
    "ai-edge-torch==0.7.0",
    "ai-edge-litert==2.0.3",
    # Audio processing
    "librosa==0.10.2",
    "soundfile==0.12.1",
    "audiomentations==0.36.0",
    # Data science
    "numpy>=1.24.0,<2.0",
    "pandas==2.2.0",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    # Utilities
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{index = "pytorch-cpu"}]
torchaudio = [{index = "pytorch-cpu"}]
